feat: implement authentication models, deposit flow, PSE integration, and base UI components for mobile and backend services